@@ -1808,7 +1808,8 @@ MagickExport int NTSystemComman(const char *command)
     return(-1);
   if (background_process)
     return(status == 0);
-  status=WaitForSingleObject(process_info.hProcess,INFINITE);
+  status=MsgWaitForMultipleObjects(1, &process_info.hProcess, TRUE, INFINITE,
+                                   QS_ALLEVENTS);
   if (status != WAIT_OBJECT_0)
     return(status);
   status=GetExitCodeProcess(process_info.hProcess,&child_status);
