@@ -1,3 +1,11 @@
+2004-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* version.sh (LIBRARY_REVISION): Bump library revision.
+	* magick/nt_base.c (NTSystemComman): Use
+	MsgWaitForMultipleObjects() rather than WaitForSingleObject() in
+	order to avoid possible deadlock when application code directly or
+	indirectly creates windows.
+
 2004-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* version.sh: GraphicsMagick 1.0.5 released.
